# imaged

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  compose.yaml  dnsmasq.conf  flake.nix  imaged.db-shm  imaged.db-wal  issues.md  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: build-caches.yaml
assets/: ipxe.efi  undionly.kpxe
crates/client/: Cargo.toml
crates/client/src/: error.rs  main.rs  shell.rs  sys.rs  task.rs  transport.rs
crates/client/src/sys/: disk.rs  mac.rs
crates/client/src/task/: capture.rs  deploy.rs  implementations.rs  multicast.rs  types.rs
crates/client/src/task/implementations/: capture.rs  deploy.rs  multicast.rs  reboot.rs
crates/client/src/transport/: capture.rs  deploy.rs  multicast.rs  sse.rs  task.rs
crates/server/: Cargo.toml
crates/server/.sqlx/: query-02264d0cb6e542bbfeb261cfed96eba009933029480bb193be70ebe5c1495a52.json  query-0abd492f9023ec7243e1b5537a0f0fb6b87df52609f245a79ec98349ba6261ae.json  query-10846c7756ce1e3507478ba186b19d541d7ec9bead4cca82fea52378d8c8ed67.json  query-11bb5d40ac55dc955bfd20019cf8c4d5b4f8028098ac2c02a59c877c4cca21b3.json  query-17e7b08cadb99cf2374616a9c13c84722e893865950fadaaea678e7dcdccb3b3.json  query-18eabf7b72e86feb2ffc91f942ce5e597b738a3c65621811eb250993463c9ede.json  query-19adea09f0f1133b8c45a9fb35f9225d27f80d48f68f3a707566d851a5166657.json  query-1ea10eb7cb388379e6a74a8c37f06b906d25fce1704633cdebb561e4868ee0ea.json  query-27602700cae5ce6e70b960accb59af85baab34b28e2aa98d26694bd42c3e6943.json  query-277a54a247137d93f3054c70a2fa453df4eaf145eb32bf77fd55c1c969d39f6b.json  query-2d5803b1fa344616b763c6df0434d5daa942f4dcf357697bdc4789bcff19467e.json  query-3263e7bdd742f425baefeed01c06e87e7f498f1397a8e98a4df65c4c2c5c3e7f.json  query-38854f1aa8c1e1307c4cfadf5160704523fcf8fb99c932fa52d2ccdd3fcee276.json  query-44431cc6cb74a780b921a073bf0aee1e0a2dda8456e1c1dffaa168635775fac6.json  query-4b86b90de364ac37a05e18f20fc0f2bb3afee97d78ea376cd5caf2316a1cc028.json  query-4d2564452cf5b5499e8d0ad1cddaccfce775a32ccaac2140685eb3f56e83d8e2.json  query-4f281d43c27898157d8868b1bd7d3af4377838cb80d7dbadd7f20ff23f835b47.json  query-577306e30dfd10864f7d8140f869e7e42429e2a889cb1feb6a94224001ff14d9.json  query-5b544d98b167785eb1816bfe3da7ef3a94e209897c02e4c9f003a8179f345131.json  query-5b64f8919e2f4e0ffc5de6294ab71b2d1d628dcdb460e6c51ea938fa1f9e4e76.json  query-62a9e5a624d09cc15431830541ff64a4e8c2465b5fc61bd30db249ae5736b9a3.json  query-681a6419e289e8462bc25f7737fed3cf3c081f7168db9e61ef72f1a7fca8e16b.json  query-751f817d21c4d93afeffe7e6567894b8f7e9e40238fd985ccb2a114228a48d04.json  query-760bb725ca1ececbac12864c51b1f12e6e8b865d021a958d3b1e572d743a18e0.json  query-7e1f4192e3c733c270678bca4ef642e68918acd4583f724ade9c46ba8e1a743b.json  query-7fcdeccdb4a8ef0e64ff2c86aff144f06caf9da2502d3a939f4d0ccc80ddd7c2.json  query-844a533a12f98d3fda5759e3efba1d7b9f7d1fb061afeec03c635c7b84b1ae7c.json  query-87338b0a06f1a8b5015146ee9400a2b8b8fb192d5ecb1fe4eff05af7455e5e01.json  query-8eb402e0c9500a0015de003c07516ef12f0904fc2ad9406565761c698a110e12.json  query-93d8b145331834dab0bea671927c7009d3defbea255d7a1baad67334c90d5fcc.json  query-944750c92437bfc61c4dda03bb559000ecb4836cfdc167c4b6cf50e262e4b274.json  query-97e7b92a0fba8e75f80f5102650262ba5b71c88a17db09a4906b75c5dae88cd2.json  query-a484159b5fd3c06b4e90b768db16e2fec3c4c21ca145b367a6314c934426fa47.json  query-a4cd37623e28d8b12630e758ffa908f61b2c85f8e78afb5eec38def4d894b92f.json  query-b3dafc145afbeeb83ebb0d7f7f72c4895c3ed2c96c5c32724ac2d5d6ec3058ec.json  query-b64465026290b8aab5b7c3955cddaf4553909ec83d439b0ff8f09ebc8a1fa67b.json  query-bfad23a706d72bffbe391e4ec033e8b44d459aa90d84963a632a037563d291e7.json  query-c44f1862d25f97a7bf79d074b1fdc133f9d56c07926147638b453473ce018e98.json  query-c93bef82ac4ac84f9f2892f0b6c9a0b3bc53522dd37f6246ac0f93a91e62da41.json  query-ce1d206903c27737b6f4ef5172aac4b1d3fdf73975ac93a9718ad30934a6db66.json  (+13 more)
crates/server/migrations/: 20260425182025_initial_migration.sql  20260426070929_add_image.sql  20260426124632_add_tasks.sql  20260705120000_per_host_task_status.sql  20260705194055_Add_host_ip.sql
crates/server/src/: api.rs  domain.rs  error.rs  main.rs  multicast.rs  registry.rs  repository.rs
crates/server/src/api/: client.rs  dashboard.rs  pxe.rs  tftp.rs
crates/server/src/api/client/: capture.rs  deploy.rs  host.rs  image.rs  sse.rs  task.rs
crates/server/src/api/dashboard/: convert.rs
crates/server/src/domain/: group.rs  host.rs  image.rs  task.rs  types.rs
crates/server/src/repository/: group.rs  host.rs  image.rs  task.rs
crates/server/src/service/: image.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  logging.rs  multicast.rs  types.rs
crates/tftp/: Cargo.toml
crates/tftp/src/: main.rs
dashboard/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
dashboard/src/: ActionMenu.tsx  App.tsx  GroupsView.tsx  HostsView.tsx  ImagesView.tsx  Sidebar.tsx  TasksView.tsx  Toaster.tsx  connectionStore.ts  format.ts  main.tsx  styles.css  toast.ts  transport.ts  useConnectionStream.ts
nix/: devshell.nix  module.nix  package.nix
nix/lib/: init.sh  initramfs-staging.nix
nix/modules/: server.nix  tftp.nix
nix/scripts/: build-initramfs.nix  run-vm-pxe.nix  run-vm.nix  setup-net.nix  teardown-net.nix
proto/v1/client/: client.proto
proto/v1/dashboard/: dashboard.proto  group.proto  host.proto  image.proto  task.proto
