[workspace]
resolver = "3"
members = [
    "gen/rs",
    "crates/server",
    "crates/client",
    "crates/shared"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-prost = "0.14"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"]}
imaged-rpc = { path = "gen/rs" }
imaged-shared = { path = "crates/shared"}
tokio-stream = { version = "0.1", features = ["sync"] }
derive_more = { version = "2.1.1", features = ["constructor"] }
tracing = "0.1"
futures = "0.3.32"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio-util = "0.7.18"
