[package]
name = "imaged-client"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

clap = { version = "4.6.1", features = ["derive"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
reqwest-eventsource = "0.6"

mac_address = "1.1.8"
