[package]
name = "imaged-server"
version.workspace = true
edition.workspace = true

[dependencies]
imaged-rpc = { workspace = true, features = ["dashboard-v1"] }
tonic.workspace = true
tokio-stream.workspace = true
derive_more.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
thiserror.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

tokio-util = "0.7.18"

axum = { version = "0.8", features = ["macros"] }
tonic-web = "0.14.5"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

chrono = "0.4.44"
async-trait = "0.1.89"
bytes = "1.11.1"
sha2 = "0.11.0"
hex = "0.4.3"
prost-types.workspace = true
