[package]
name = "imaged-server"
version.workspace = true
edition.workspace = true

[dependencies]
imaged-rpc = { workspace = true, features = ["dashboard-v1"] }
tonic.workspace = true
tokio-stream.workspace = true
derive_more = { workspace = true, features = ["display", "from_str", "is_variant", "unwrap"] }
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
imaged-shared.workspace = true
tokio-util.workspace = true

axum = { version = "0.8", features = ["macros"] }
tonic-web = "0.14.5"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
bytes = "1.11.1"
hex = "0.4.3"
prost-types.workspace = true
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
async-tftp = "0.4.2"
socket2 = { version = "0.6", features = ["all"] }
