[package]
name = "imaged-shared"
version.workspace = true
edition.workspace = true

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { workspace = true, features = ["is_variant", "constructor", "from", "display"] }
serde.workspace = true
serde_json.workspace = true
