[package]
name = "imaged-shared"
version.workspace = true
edition.workspace = true

[features]
all = ["logging", "types", "multicast"]
logging = ["dep:tracing-subscriber"]
types = ["dep:derive_more", "dep:serde"]
multicast = []

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
derive_more = { workspace = true, features = ["is_variant", "constructor", "from", "display"], optional = true }
serde = { workspace = true, optional = true }
